[tool.poetry]
name = "sales-migration-test"
version = "0.1.0"
description = "Intropy Backend Engineer Tech Test"
authors = ["Intropy"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"""
sqlmodel = "^0.0.14"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
pandas = "^2.1.0"
google-cloud-storage = "^2.10.0"
uvicorn = "^0.24.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"